tests/paczka2/big_fuzzy/54607849.err
Error in line 23: EF14lCt92p A873 80,24
Error in line 24: 4bEdVtP6U A329 19,7
Error in line 26: xvQyHMak1kM A903 7,3
Error in line 25: 4bEdVtP6U A134 750,8
Error in line 27: xvQyHMak1kM A329 46,3
Error in line 28: eCmRN0n A134 32,4
Error in line 33: A329 A903 51,3
Error in line 41: A329 A873 8,0
Error in line 45: A329 A134 27,5
Error in line 48: 4bEdVtP6U A134 68,3
Error in line 62: eMyXWe A134 701,1
Error in line 69: A329 A329 99,5
Error in line 75: 4bEdVtP6U A329 123,29
Error in line 67: 4bEdVtP6U A329 70,4
Error in line 89: SHSVoEljiz A873 99L6
Error in line 52: EF14lCt92p A873 7,9
Error in line 94: EF14lCt92p A903 28,3
Error in line 105: 4bEdVtP6U A329 27,4
Error in line 111: xvQyHMak1kM A329 141,2
Error in line 77: eMyXWe A873 14,6
Error in line 107: SHSVoEljiz A873 73,0
Error in line 128: EF14lCt92p A134 4',2
Error in line 134: A329 A873 87,8
Error in line 138: EF14lCt92p A873 96,5
Error in line 151: eMyXWe A873 27,5
Error in line 145: SHSVoEljiz A903 4,8
Error in line 158: eCmRN0n A903 67,1
Error in line 154: SHSVoEljiz A329 26,0
Error in line 161: eCmRN0n A134 146,96
Error in line 159: eCmRN0n A134 53,5
Error in line 162: eCmRN0n A903 1,5
Error in line 146: xvQyHMak1kM A329 90,1
Error in line 131: 4bEdVtP6U A134 41,8
Error in line 163: eCmRN0n A134 48,1
Error in line 167: A329 A903 30,0
Error in line 176: A329 A329 28,9
Error in line 179: EF14lCt92p A903 83,6
Error in line 180: A329 A903 37,9
Error in line 184: EF14lCt92p A134 76,5
Error in line 199: EF14lCt92p A329 -1,3
Error in line 200: SHSVoEljiz A134 -5,3
Error in line 208: EF14lCt92p A329 399,8
Error in line 210: xvQyHMak1kM A329 77,8
Error in line 209: EF14lCt92p A873 44,9
Error in line 232: xvQyHMak1kM A903 98,1
Error in line 244: eCmRN0n A903 214,5
